src/objects/Currency_Center_Survey__c.object
<CustomObject>
    <fields>
        <fullName>Airline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Airline</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Currency Center Survey</relationshipLabel>
        <relationshipName>Currency_Center_Survey</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Allocation_of_Funds__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allocation of Funds</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount_USD__c</fullName>
        <label>Amount USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amounts_Blocked_Delayed__c</fullName>
        <defaultValue>0</defaultValue>
        <description>In Local Currency</description>
        <label>Amounts Blocked/Delayed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Exchange_Rate__c</fullName>
        <defaultValue>0</defaultValue>
        <description>To USD</description>
        <label>Average Exchange Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Percentage__c</fullName>
        <label>Bank Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bank__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank</label>
        <referenceTo>Financial_Institution__c</referenceTo>
        <relationshipLabel>Currency Center Survey</relationshipLabel>
        <relationshipName>Currency_Center_Survey</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cloned_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the survey that was used as a model to clone all their child surveys</description>
        <label>Cloned From</label>
        <referenceTo>Currency_Center_Survey__c</referenceTo>
        <relationshipLabel>Currency Center Survey (Cloned From)</relationshipLabel>
        <relationshipName>Currency_Center_Survey1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comment on issues faced and causing blocked funds</description>
        <inlineHelpText>Comment on issues faced and causing blocked funds</inlineHelpText>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Currency Center Survey</relationshipLabel>
        <relationshipName>Currency_Center_Survey</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_Comments__c</fullName>
        <label>Country Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Country_Name__c</fullName>
        <label>Country Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country_Profile__c</referenceTo>
        <relationshipLabel>Currency Center Survey</relationshipLabel>
        <relationshipName>Currency_Center_Survey</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Balance_Amount__c</fullName>
        <label>Current Balance Amount in local Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delay_in_day__c</fullName>
        <label>Delay in day</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATA_ISO_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IATA ISO Country</label>
        <referenceTo>IATA_ISO_Country__c</referenceTo>
        <relationshipLabel>Currency Center Survey</relationshipLabel>
        <relationshipName>Currency_Center_Survey</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ICCS__c</fullName>
        <label>ICCS</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Allocation_Amount__c</fullName>
        <label>Last Allocation Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Allocation_Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Allocation_Total_Amount_USD__c</fullName>
        <label>Total Amount USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_Currency__c</fullName>
        <formula>Country__r.ISO_Code__c</formula>
        <label>Local Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_Survey__c</fullName>
        <label>Month Survey</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nov_Dec_Sales__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Nov &amp; Dec Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Currency_Business__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Currency Business</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Id</label>
        <referenceTo>Currency_Center_Survey__c</referenceTo>
        <relationshipLabel>Currency Center Survey</relationshipLabel>
        <relationshipName>Currency_Center_Survey</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Report_Type_Comments__c</fullName>
        <label>Report Type Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reporting_Date__c</fullName>
        <label>Reporting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reporting_Type__c</fullName>
        <label>Reporting Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Pending Transfer</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Blocked Amount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SalesFundsAwaintingRepatriation__c</fullName>
        <label>Sales Funds Awainting Repatriation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Period_End_Date__c</fullName>
        <label>Sales Month Blocked/Delayed End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Period_Start_Date__c</fullName>
        <label>Sales Month Blocked/Delayed Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Period__c</fullName>
        <description>Detailled beginning and end date</description>
        <label>Sales Period</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bank Record</fullName>
                </value>
                <value>
                    <fullName>Type Of Operations Record</fullName>
                </value>
                <value>
                    <fullName>Country Record</fullName>
                </value>
                <value>
                    <fullName>Survey Record</fullName>
                </value>
                <value>
                    <fullName>Country Comment Record</fullName>
                </value>
                <value>
                    <fullName>Report Type Record</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <label>Survey</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Amount_USD__c</fullName>
        <label>Total Amount USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Blocked_Delayed_Amount__c</fullName>
        <formula>Amounts_Blocked_Delayed__c/Average_Exchange_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Blocked/Delayed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Currency__c</fullName>
        <label>Total_Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_Of_Operations_Percentage__c</fullName>
        <label>Type Of Operations (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Type_of_Operations__c</fullName>
        <label>Type of Operations</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct Sales</fullName>
                </value>
                <value>
                    <fullName>BSP</fullName>
                </value>
                <value>
                    <fullName>CASS</fullName>
                </value>
                <value>
                    <fullName>ICCS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Revenues__c</fullName>
        <label>Type of Revenues</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not flown ticket revenues</fullName>
                </value>
                <value>
                    <fullName>Not flown from Algeria</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year_Survey__c</fullName>
        <label>Year Survey</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Currency Center Survey</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Airline__c</columns>
        <columns>Status__c</columns>
        <columns>Year_Survey__c</columns>
        <columns>Month_Survey__c</columns>
        <columns>Country_Name__c</columns>
        <columns>Survey__c</columns>
        <columns>Section__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Annual_Country</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Parent_Id__c</columns>
        <columns>Country_Name__c</columns>
        <columns>Currency__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Currency_Center_Survey__c.AnnualCountryRecord</value>
        </filters>
        <label>Annual Country</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Annual_Surveys</fullName>
        <columns>NAME</columns>
        <columns>Airline__c</columns>
        <columns>Year_Survey__c</columns>
        <columns>Status__c</columns>
        <columns>SalesFundsAwaintingRepatriation__c</columns>
        <columns>Amount_USD__c</columns>
        <columns>Reporting_Date__c</columns>
        <columns>Sales_Period__c</columns>
        <columns>Total_Amount_USD__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Survey__c</field>
            <operation>equals</operation>
            <value>Annual</value>
        </filters>
        <label>Annual Surveys</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Monthly_Surveys</fullName>
        <columns>NAME</columns>
        <columns>Airline__c</columns>
        <columns>Year_Survey__c</columns>
        <columns>Month_Survey__c</columns>
        <columns>Status__c</columns>
        <columns>Amount_USD__c</columns>
        <columns>Reporting_Date__c</columns>
        <columns>Sales_Period__c</columns>
        <columns>Total_Amount_USD__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Survey__c</field>
            <operation>equals</operation>
            <value>Monthly</value>
        </filters>
        <label>Monthly Surveys</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Record_Type</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Parent_Id__c</columns>
        <columns>Section__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>Record Type</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CCS-{0000000000}</displayFormat>
        <label>Currency Center Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Currency Center Survey</pluralLabel>
    <recordTypes>
        <fullName>AnnualBankRecord</fullName>
        <active>true</active>
        <description>Annual - Bank Record</description>
        <label>Annual - Bank Record</label>
    </recordTypes>
    <recordTypes>
        <fullName>AnnualCountryCommentRecord</fullName>
        <active>true</active>
        <description>Annual - Country Comment Record</description>
        <label>Annual - Country Comment Record</label>
    </recordTypes>
    <recordTypes>
        <fullName>AnnualCountryRecord</fullName>
        <active>true</active>
        <description>Annual - Country Record</description>
        <label>Annual - Country Record</label>
    </recordTypes>
    <recordTypes>
        <fullName>AnnualReportTypeRecord</fullName>
        <active>true</active>
        <description>Annual - Report Type Record</description>
        <label>Annual - Report Type Record</label>
    </recordTypes>
    <recordTypes>
        <fullName>AnnualSurveyRecord</fullName>
        <active>true</active>
        <description>Annual - Survey Record</description>
        <label>Annual - Survey Record</label>
    </recordTypes>
    <recordTypes>
        <fullName>AnnualTypeOfOperationsRecord</fullName>
        <active>true</active>
        <description>Annual - Type Of Operations Record</description>
        <label>Annual - Type Of Operations Record</label>
    </recordTypes>
    <recordTypes>
        <fullName>MonthlyBankRecord</fullName>
        <active>true</active>
        <description>Monthly - Bank Record</description>
        <label>Monthly - Bank Record</label>
    </recordTypes>
    <recordTypes>
        <fullName>MonthlyCountryRecord</fullName>
        <active>true</active>
        <description>Monthly - Country Record</description>
        <label>Monthly - Country Record</label>
    </recordTypes>
    <recordTypes>
        <fullName>MonthlyReportTypeRecord</fullName>
        <active>true</active>
        <description>Monthly - Report Type Record</description>
        <label>Monthly - Report Type Record</label>
    </recordTypes>
    <recordTypes>
        <fullName>MonthlySurveyRecord</fullName>
        <active>true</active>
        <description>Monthly - Survey Record</description>
        <label>Monthly - Survey Record</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>